--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div
                             class="absolute inset-0 bg-gradient-to-r from-blue-400 to-purple-500 rounded-3xl transform rotate-3 scale-105 opacity-50 blur-lg">
                         </div>
-                        <img src="images/Arihant.png" alt="Arihant Profile"
+                        <img src="images/Arihant.png" alt="Portrait photo of Arihant Appannavar" loading="lazy"
                             class="relative w-full h-auto rounded-3xl shadow-2xl border-4 border-white object-cover">
                     </div>
                 </div>
@@ -172,7 +172,9 @@
                 <div
                     class="bg-white rounded-xl shadow-md overflow-hidden card-hover transition duration-300 fade-in delay-1">
                     <div class="relative group h-48 overflow-hidden bg-gray-100">
-                        <img src="images/Object Detection on Laptop.png" alt="Object Detection on Laptop"
+                        <img src="images/Object Detection on Laptop.png"
+                            alt="Screenshot of object detection running on a laptop showing bounding boxes around cats and dogs"
+                            loading="lazy"
                             class="w-full h-full object-contain transition duration-300 group-hover:scale-110">
                     </div>
                     <div class="p-6">
@@ -202,7 +204,9 @@
                 <div
                     class="bg-white rounded-xl shadow-md overflow-hidden card-hover transition duration-300 fade-in delay-2">
                     <div class="relative group h-48 overflow-hidden bg-gray-100">
-                        <img src="images/nocodeml.png" alt="No-Code ML Training App"
+                        <img src="images/nocodeml.png"
+                            alt="Screenshot of the No-Code ML Training App interface showing model training options"
+                            loading="lazy"
                             class="w-full h-full object-contain transition duration-300 group-hover:scale-110">
                     </div>
                     <div class="p-6">
@@ -237,7 +241,8 @@
                 <div
                     class="bg-white rounded-xl shadow-md overflow-hidden card-hover transition duration-300 fade-in delay-1">
                     <div class="relative group h-48 overflow-hidden">
-                        <img src="images/ml.png" alt="Predicting Car Prices"
+                        <img src="images/ml.png" alt="Machine learning conceptual diagram for Predicting Car Prices"
+                            loading="lazy"
                             class="w-full h-full object-cover transition duration-300 group-hover:scale-110">
                     </div>
                     <div class="p-6">
@@ -316,12 +321,13 @@
                 <div
                     class="bg-white rounded-xl shadow-md overflow-hidden card-hover transition duration-300 fade-in delay-3">
                     <div class="relative group h-48 overflow-hidden bg-gray-100">
-                        <img src="images/wirecuttercadimmage.png" alt="CAD Image"
-                            class="w-full h-full object-contain absolute inset-0 animate-fade-1">
-                        <img src="images/wirecuttingeletroniccircut.png" alt="Circuit Image"
+                        <img src="images/wirecuttercadimmage.png" alt="3D CAD render of the Wire Cutting Machine"
+                            loading="lazy" class="w-full h-full object-contain absolute inset-0 animate-fade-1">
+                        <img src="images/wirecuttingeletroniccircut.png"
+                            alt="Electronic circuit diagram for the Wire Cutting Machine" loading="lazy"
                             class="w-full h-full object-contain absolute inset-0 animate-fade-2">
-                        <img src="images/wirecuttingfinal.png" alt="Final Image"
-                            class="w-full h-full object-contain absolute inset-0 animate-fade-3">
+                        <img src="images/wirecuttingfinal.png" alt="Final physical assembly of the Wire Cutting Machine"
+                            loading="lazy" class="w-full h-full object-contain absolute inset-0 animate-fade-3">
                     </div>
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-gray-800 mb-2">Wire Cutting Machine</h3>
@@ -513,9 +519,11 @@
                 <div
                     class="bg-white rounded-xl shadow-md overflow-hidden card-hover transition duration-300 fade-in delay-3">
                     <div class="relative group h-48 overflow-hidden bg-gray-100">
-                        <img src="images/360° Image Stitching  1.png" alt="360 Image Stitching 1"
+                        <img src="images/360° Image Stitching  1.png"
+                            alt="Hardware setup of the Quanser QCar with 4 CSI cameras" loading="lazy"
                             class="w-full h-full object-contain transition-opacity duration-500 opacity-100 group-hover:opacity-0 absolute inset-0">
-                        <img src="images/360° Image Stitching 2 .png" alt="360 Image Stitching 2"
+                        <img src="images/360° Image Stitching 2 .png"
+                            alt="Real-time 360 degree 2D panoramic stitched output from the cameras" loading="lazy"
                             class="w-full h-full object-contain transition-opacity duration-500 opacity-0 group-hover:opacity-100 absolute inset-0">
                     </div>
                     <div class="p-6">
@@ -548,7 +556,8 @@
                 <div
                     class="bg-white rounded-xl shadow-md overflow-hidden card-hover transition duration-300 fade-in delay-1">
                     <div class="relative group h-48 overflow-hidden bg-black">
-                        <img src="videos/result_video.gif" alt="Real-Time Car Avoidance"
+                        <img src="videos/result_video.gif"
+                            alt="Animated GIF showing real-time car avoidance and lane tracking overlay" loading="lazy"
                             class="w-full h-full object-contain">
                     </div>
                     <div class="p-6">
@@ -833,9 +842,10 @@
                 <!-- ADDC 2024 Competition -->
                 <div
                     class="relative w-full h-[450px] md:h-[500px] rounded-2xl overflow-hidden shadow-2xl fade-in delay-1 group">
-                    <img src="images/2024_award_ceremony.jpg" alt="ADDC 2.0 Team"
+                    <img src="images/2024_award_ceremony.jpg" alt="ADDC 2.0 team photo at the 2024 award ceremony"
+                        loading="lazy"
                         class="absolute inset-0 w-full h-full object-cover transition-opacity duration-700 opacity-100 group-hover:opacity-0 group-hover:scale-105">
-                    <img src="images/24-addc.jpg" alt="ADDC 2.0 Drone"
+                    <img src="images/24-addc.jpg" alt="Close-up of the ADDC 2.0 autonomous drone" loading="lazy"
                         class="absolute inset-0 w-full h-full object-cover transition-opacity duration-700 opacity-0 group-hover:opacity-100 group-hover:scale-105">
                     <div class="absolute inset-0 bg-black/10 transition duration-300 group-hover:bg-black/20"></div>
                     <div
@@ -865,9 +875,10 @@
                 <!-- Aerothon 2024 Competition -->
                 <div
                     class="relative w-full h-[450px] md:h-[500px] rounded-2xl overflow-hidden shadow-2xl fade-in delay-2 group">
-                    <img src="images/2024_aerothon_award_ceremony.jpg" alt="Trkshya Team"
+                    <img src="images/2024_aerothon_award_ceremony.jpg"
+                        alt="Trkshya team photo at the Aerothon 2024 award ceremony" loading="lazy"
                         class="absolute inset-0 w-full h-full object-cover transition-opacity duration-700 opacity-100 group-hover:opacity-0 group-hover:scale-105">
-                    <img src="images/24-aerothon.jpg" alt="Trkshya Drone"
+                    <img src="images/24-aerothon.jpg" alt="Close-up of the Trkshya autonomous drone" loading="lazy"
                         class="absolute inset-0 w-full h-full object-cover transition-opacity duration-700 opacity-0 group-hover:opacity-100 group-hover:scale-105">
                     <div class="absolute inset-0 bg-black/10 transition duration-300 group-hover:bg-black/20"></div>
                     <div
@@ -1004,7 +1015,8 @@
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/3 fade-in">
                     <div class="relative rounded-2xl overflow-hidden shadow-2xl">
-                        <img src="images/Arihant.png" alt="Arihant Appannavar" class="w-full h-auto object-cover">
+                        <img src="images/Arihant.png" alt="Portrait photo of Arihant Appannavar smiling" loading="lazy"
+                            class="w-full h-auto object-cover">
                     </div>
                 </div>
                 <div class="md:w-2/3 fade-in delay-1">
