--- a/index.html
+++ b/index.html
@@ -882,9 +882,9 @@
                         class="absolute inset-0 w-full h-full object-cover transition-opacity duration-700 opacity-0 group-hover:opacity-100 group-hover:scale-105">
                     <div class="absolute inset-0 bg-transparent transition duration-500 group-hover:bg-black/60"></div>
                     <div
-                        class="absolute inset-y-0 left-0 w-full md:w-1/2 lg:w-[45%] p-6 md:p-10 flex items-center justify-start pointer-events-none group-hover:pointer-events-auto">
+                        class="absolute inset-y-0 right-0 w-full md:w-1/2 lg:w-[45%] p-6 md:p-10 flex items-center justify-end pointer-events-none group-hover:pointer-events-auto">
                         <div
-                            class="bg-[#242618] bg-opacity-95 rounded-xl p-8 md:p-10 shadow-[0_8px_30px_rgb(0,0,0,0.8)] backdrop-blur-md border border-gray-600/50 transform transition-all duration-500 opacity-0 -translate-x-12 group-hover:translate-x-0 group-hover:opacity-100">
+                            class="bg-[#242618] bg-opacity-95 rounded-xl p-8 md:p-10 shadow-[0_8px_30px_rgb(0,0,0,0.8)] backdrop-blur-md border border-gray-600/50 transform transition-all duration-500 opacity-0 translate-x-12 group-hover:translate-x-0 group-hover:opacity-100">
                             <h3
                                 class="text-3xl md:text-4xl font-bold text-white mb-2 text-center tracking-wide uppercase">
                                 TRKSHYA
