fix: Update simulation page video pointer to small compressed video representation

--- a/simulation.html
+++ b/simulation.html
@@ -654,7 +654,7 @@
                 <div class="media-item">
                     <div class="media-placeholder">
                         <video class="media-video" autoplay muted loop playsinline>
-                            <source src="drone_simulation.mp4" type="video/mp4">
+                            <source src="videos/drone_simulation_small.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="media-content">
